# genro-textual

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: architecture.md  conf.py  getting-started.md  index.md  textual_widgets.md
docs/guide/: building-ui.md  cli.md  css-and-styles.md  data-binding.md  inspector.md  recipe.md  widgets.md
docs/reference/: api.md  widgets.md
examples/: __init__.py  complex_app.py  poc_binding.py  poc_drawer.py  showcase.py
examples/_internal/: minimal_app.py  test_mount_approach.py  test_new_builder.py
examples/basic/: button_variants.py  color_stripes.py  hello_world.py  input_form.py  nested_containers.py
examples/interactive/: button_app.py  remote_app.py
examples/reactive/: data_binding.py
examples/widgets/: datatable.py  tabs.py
src/genro_textual/: __init__.py  cli.py  debug.py  registry.py  remote.py  textual_app.py  textual_builder.py  textual_compiler.py
src/genro_textual/components/: __init__.py  foundation.py
tests/: test_pipeline.py
tutorial_textual_bag/: 01_hello_world.py
