# Copyright 2025 Softwell S.r.l. - SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genro-textual"
version = "0.4.0"
description = "Textual UI framework for Genro Bag-driven applications"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Genropy Team" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
]
dependencies = [
    "genro-bag>=0.11.0",
    "genro-builders>=0.14.0",
    "textual>=0.47.0",
    "watchfiles>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
docs = [
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "sphinx-autodoc-typehints>=3.0.0",
    "myst-parser>=4.0.0",
    "sphinxcontrib-mermaid>=1.0.0",
]

[project.scripts]
pygui = "genro_textual.cli:main"

[project.urls]
Homepage = "https://github.com/genropy/genro-textual"
Documentation = "https://genro-textual.readthedocs.io"
Repository = "https://github.com/genropy/genro-textual"
Issues = "https://github.com/genropy/genro-textual/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/genro_textual"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
